2.0.0-alpha.11
fixed the wording in PermissionChecker. Some code clean up. Moved the example command out of the slash command package.